feat(chat): chat and messages management
* username to first_name and last_name

* login with username to email

* model history chats
